--- a/index.html
+++ b/index.html
@@ -11,25 +11,32 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="center-container">
-    <img src="images/illustration-hero.svg" alt="main ilustration">
+  <div class="center-container1">
+    <div class="center-container2">
+      <img src="images/illustration-hero.svg" alt="main ilustration" class="img-ilustration">
   <h1> Order Summary</h1>
 
-  <span>
+  <span class="text">
     You can now listen to millions of songs,<br> audiobooks, and podcasts on any 
     device<br> anywhere you like!
   </span>
 
-  <div class="plan">
-    <p>Annual Plan</p>
-    <img src="images/icon-music.svg" alt="sheet images">
-    <span>$59.99/year</span>
-  
-    <a href="#">Change</a>
+
+  <div class="container">
+    <img src="images/icon-music.svg" alt="sheet images" class="image">
+    <div class="text-container">
+      <p>Anuluj Plan</p>
+      <span>$59.99/year</span>
+    </div>
+    <a href="#" class="link">Change</a>
   </div>
 
+
+
+
   <button>Proceed to Payment</button>
-  <a href="#">Cancel Order</a>
+  <a href="#" class="cancel">Cancel Order</a>
+    </div>
   </div>
   <div class="attribution">
     <p>
